examples/pod-definition.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
    - name: testpod
      image: nginx
