examples/ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: application
spec:
  tls:
    - hosts:
        - myapp.com
      secretname: myapp-secret-tls
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myapp-service
              servicePort: 3000
